[package]
name = "sharden-miner"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "2.1.0", features = ["full"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tokio = { version = "1.47", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"